# zephyr

boards/arm/frdm_kl43z/: Kconfig.board  Kconfig.defconfig  board.cmake  frdm_kl43z_defconfig  pinmux.c
include/knot/: core.h
samples/net/coap_client/src/: coap-client.c
samples/net/echo_client/: overlay-ot.conf  prj_nrf52840_ot.conf
subsys/: CMakeLists.txt  Kconfig
subsys/knot/: CMakeLists.txt  Kconfig
subsys/knot/include/: protocol.h  states.h
subsys/knot/src/: CMakeLists.txt  protocol.c  states.c
subsys/net/l2/openthread/: Kconfig  openthread.c  openthread_utils.c
subsys/net/lib/config/: init.c
subsys/net/lib/openthread/: CMakeLists.txt
subsys/net/lib/openthread/platform/: logging.c  radio.c
